fix: digital option tab scrollbar css

--- a/src/features/components/organisms/available-options/styles.module.scss
+++ b/src/features/components/organisms/available-options/styles.module.scss
@@ -11,15 +11,6 @@
 
 .tab_container {
     position: relative;
-    overflow: scroll;
-    scrollbar-width: none;
-    &::-webkit-scrollbar {
-        display: none;
-    }
-
-    @include breakpoints(tablet) {
-        overflow: scroll;
-    }
 }
 
 .scroll_buttons {
@@ -42,12 +33,14 @@
     z-index: 1;
 }
 
-.scroll_container {
-    max-inline-size: 100vw;
-    @include breakpoints(phone) {
-        overflow: hidden !important;
-        white-space: nowrap;
-        justify-content: start;
+.scroll_container {    
+    overflow: scroll;
+    scrollbar-width: none;
+    overscroll-behavior: contain;
+    scroll-snap-type: x mandatory;
+    max-inline-size: calc(100vw - 1.5rem);
+    &::-webkit-scrollbar {
+        display: none;
     }
 }
 .is_show_left,
